tests/ui/const-generics/mgca/assoc-const-projection-in-bound.stderr
error[E0277]: the trait bound `(): S<0>` is not satisfied
  --> $DIR/assoc-const-projection-in-bound.rs:20:5
   |
LL |     (): S<{ <T as A>::VALUE }>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `S<0>` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/assoc-const-projection-in-bound.rs:16:1
   |
LL | trait S<const K: usize> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
